tdf#93044 - fix silly calc copy/paste lifecycle issue.

Change-Id: Ic3d26f45251ff27bacd572f0cb7a7aadf091e808